# python-project-quickstart

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: default.yml  default.yml.disabled
src/: project.py
